Fix image grid margins on mobile.

--- a/scss/blog/_media.scss
+++ b/scss/blog/_media.scss
@@ -60,6 +60,10 @@ pre {
 	margin-bottom: 1em;
 }
 
+.image-wrapper {
+	margin-bottom: 1em;
+}
+
 // Leave these, overwritting a plugin.
 .hljs {
 	font-family: 'Source Code Pro' !important; 
